Grupo de estudiante endpoint added.
