# ResponseMessages/EstudianteResponses.go
@@ -1,36 +1,36 @@
 package ResponseMessages
 
 type ListEstudiantesResponse struct {
-	Rol_estudiante                GetOneRolResponse   `json:"rol_estudiante"`
-	Grupo_estudiante              GetOneGrupoResponse `json:"grupo_estudiante"`
-	Rut_estudiante                string              `json:"rut_estudiante"`
-	Nombres_estudiante            string              `json:"nombres_estudiante"`
-	Apellidos_estudiante          string              `json:"apellidos_estudiante"`
-	Correo_electronico_estudiante string              `json:"correo_electronico_estudiante"`
-	Telefono_fijo_estudiante      string              `json:"telefono_fijo_estudiante"`
-	Telefono_celular_estudiante   string              `json:"telefono_celular_estudiante"`
+	Rol_estudiante                GetOneRolResponse `json:"rol_estudiante"`
+	Id_grupo                      int               `json:"id_grupo"`
+	Rut_estudiante                string            `json:"rut_estudiante"`
+	Nombres_estudiante            string            `json:"nombres_estudiante"`
+	Apellidos_estudiante          string            `json:"apellidos_estudiante"`
+	Correo_electronico_estudiante string            `json:"correo_electronico_estudiante"`
+	Telefono_fijo_estudiante      string            `json:"telefono_fijo_estudiante"`
+	Telefono_celular_estudiante   string            `json:"telefono_celular_estudiante"`
 }
 
 type GetOneEstudianteResponse struct {
-	Rol_estudiante                GetOneRolResponse   `json:"rol_estudiante"`
-	Grupo_estudiante              GetOneGrupoResponse `json:"grupo_estudiante"`
-	Rut_estudiante                string              `json:"rut_estudiante"`
-	Nombres_estudiante            string              `json:"nombres_estudiante"`
-	Apellidos_estudiante          string              `json:"apellidos_estudiante"`
-	Correo_electronico_estudiante string              `json:"correo_electronico_estudiante"`
-	Telefono_fijo_estudiante      string              `json:"telefono_fijo_estudiante"`
-	Telefono_celular_estudiante   string              `json:"telefono_celular_estudiante"`
+	Rol_estudiante                GetOneRolResponse `json:"rol_estudiante"`
+	Id_grupo                      int               `json:"id_grupo"`
+	Rut_estudiante                string            `json:"rut_estudiante"`
+	Nombres_estudiante            string            `json:"nombres_estudiante"`
+	Apellidos_estudiante          string            `json:"apellidos_estudiante"`
+	Correo_electronico_estudiante string            `json:"correo_electronico_estudiante"`
+	Telefono_fijo_estudiante      string            `json:"telefono_fijo_estudiante"`
+	Telefono_celular_estudiante   string            `json:"telefono_celular_estudiante"`
 }
 
 type GetMyEstudianteResponse struct {
-	Rol_estudiante                GetOneRolResponse   `json:"rol_estudiante"`
-	Grupo_estudiante              GetOneGrupoResponse `json:"grupo_estudiante"`
-	Rut_estudiante                string              `json:"rut_estudiante"`
-	Nombres_estudiante            string              `json:"nombres_estudiante"`
-	Apellidos_estudiante          string              `json:"apellidos_estudiante"`
-	Correo_electronico_estudiante string              `json:"correo_electronico_estudiante"`
-	Telefono_fijo_estudiante      string              `json:"telefono_fijo_estudiante"`
-	Telefono_celular_estudiante   string              `json:"telefono_celular_estudiante"`
+	Rol_estudiante                GetOneRolResponse `json:"rol_estudiante"`
+	Id_grupo                      int               `json:"id_grupo"`
+	Rut_estudiante                string            `json:"rut_estudiante"`
+	Nombres_estudiante            string            `json:"nombres_estudiante"`
+	Apellidos_estudiante          string            `json:"apellidos_estudiante"`
+	Correo_electronico_estudiante string            `json:"correo_electronico_estudiante"`
+	Telefono_fijo_estudiante      string            `json:"telefono_fijo_estudiante"`
+	Telefono_celular_estudiante   string            `json:"telefono_celular_estudiante"`
 }
 
 type AddNewEstudianteResponse struct {
